fix layout bugs in new deal page

--- a/app/assets/stylesheets/new_deal.css.scss
+++ b/app/assets/stylesheets/new_deal.css.scss
@@ -5,6 +5,8 @@ body {
       background: image-url('bg-html.jpg');
       width: 48%;
       font-size: 14px;
+      margin-bottom: 3em;
+      height: 53em;
 
       .title {
         font-family: 'Colaborate-Thin', 'Helvetica Neue';
